--- a/style.css
+++ b/style.css
@@ -45,4 +45,14 @@ h1,h2,h3,label{
     border-width: 1px;
     background: #eeaeca;
   }
-  
+  footer .last {
+    width: 100%;
+    height: 100%;
+    background: rgba(247, 247, 247, 0);
+    color: rgb(0, 0, 0);
+    display: flex;
+    align-items: baseline;
+    justify-content: baseline;
+    font-size: medium;
+    border-radius: 0px;
+  }
